fix accent contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,9 @@
     --accent: 225 49% 32%;
     --fg-default: 220 9% 94%;
     --fg-muted: 213 6% 72%;
+    --fg-muted: 235 8% 72%;
     --fg-accent: 228 100% 81%;
+    --fg-accent: 229 98% 81%;
     --fg-error: 359 100% 78%;
     --border: 206 6% 25%;
 
